--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "embla-carousel-react": "^8.6.0",
+    "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
